[package]
name = "rems"
version = "0.0.11"
authors = ["Randy Barlow <randy@electronsweatshop.com>", "Jeremy Cline <jeremy@jcline.org>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/bowlofeggs/rems"
documentation = "https://docs.rs/rems"
description = """\
              A finite difference time domain (FDTD) electromagnetic simulator."""
keywords = ["fdtd", "simulator", "electromagnetism", "field", "maxwell"]
categories = ["command-line-utilities", "science", "simulation"]
edition = "2021"

[dependencies]
bson = "2"
inline-python = "0.8"
pyo3 = "0.15"
rayon = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
structopt = "0.3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
